      "targetted" and "targetting" as they are valid alternative
      spellings in AU.  (Closes: #852145)
    + [EB] Add some more spelling corrections.  (Closes: #852369, #852404,
      #852407, #852409, #852410, #852411, #852413, #852414, #852416,
      #852419, #852421, #852426)
    + [CL] Add "none were" -> "none was" multiword correction.
      (Closes: 860558)

  * debian/copyright:
    + [EB] Add Edward Betts.

  * lib/Lintian/CheckScript.pm:
    + [NT] Remove fallback code for "old" style "pm"-less checks.

  * frontend/dplint:
    + [NT] Ensure all include directories are absolute before passing
      them on to the actual command.

  * reporting/graphs/tags.gpi:
    + [NT] Tweak tags.gpi so it works with gnuplot 5.

  * t/runtests:
    + [NT] Re-sort test output after running the "post_test" sed script
      on the output.  This prevent test failures caused by the order
      changing on different architectures prior to the sed script is run
      (assuming the sed script otherwise normalises the differences
      correctly).
  * t/tests/cruft-general-upstream/pre_upstream:
    + [EB] Fix failing tests by making the fake flash object more
      convincing.  The most recent version of libmagic uses a more precise
      definition of the data within a flash file.  (Closes: #852891)

  * vendors/ubuntu/main/data/changes-file/known-dists:
    + [CW] Add zesty.

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Fri, 30 Dec 2016 17:14:54 +0100

lintian (2.5.50) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - invalid-value-in-built-using-field
      - license-problem-convert-utf-code
      - new-package-should-not-package-python2-module
      - php-script-but-no-php-cli-dep
      - php-script-with-unusual-interpreter
    + Removed:
      - php-script-but-no-phpX-cli-dep

  * checks/binaries.{desc,pm}:
    + [NT] Handle RUNPATH like we handle RPATH.  (Closes: #844903)