@@ -20,6 +20,7 @@ Build-Depends: aspell,
                diffstat,
                docbook-utils,
                docbook-xml,
+               dpkg (>= 1.17.14),
                fakeroot,
                file,
                gettext,
@@ -78,6 +79,7 @@ Architecture: all
 Depends: binutils,
          bzip2,
          diffstat,
+         dpkg (>= 1.17.14),
          file,
          gettext,
          intltool-debian,
@@ -103,8 +105,7 @@ Depends: binutils,
          xz-utils,
          ${misc:Depends},
          ${perl:Depends},
-Recommends: dpkg (>= 1.17.14),
-            perl (>= 5.20) | libautodie-perl (>= 2.18),
+Recommends: perl (>= 5.20) | libautodie-perl (>= 2.18),
             libperlio-gzip-perl,
 Suggests: binutils-multiarch,
           dpkg-dev,
